Fix homepage recipe alignment bug * Create recipe summary modal * Move recipe history modal into new file * Move history modal related CSS to new file

--- a/app/assets/stylesheets/bootstrap_custom.sass
+++ b/app/assets/stylesheets/bootstrap_custom.sass
@@ -1,3 +1,5 @@
+@import history_modal
+
 .alert-notice
   @extend .alert-info
 
@@ -13,26 +15,6 @@
 
 .navbar-center > li > a
   font-size: 2em
-
-img.img-responsive.modal-img
-  height: 125px
-
-.modal
-  display: none
-  overflow: auto
-  position: fixed
-  top: -31px
-  z-index: 1050
-  -webkit-overflow-scrolling: touch
-  outline: 0
-
-body .modal-dialog
-  width: 100%
-  display: inline-block
-  height: 25px
-
-.modal-content
-  box-shadow: 0 0 29px #f80014
 
 @media screen and (min-width: 768px)
   .navbar-nav.navbar-center
