--- a/app/assets/stylesheets/recipes.sass
+++ b/app/assets/stylesheets/recipes.sass
@@ -66,3 +66,8 @@ table.recipes
 
   img
     height: 50px
+
+.recipe-card
+  height: 290px
+  overflow: hidden
+  position: relative
